--- a/Presentation/appsettings.Development.json
+++ b/Presentation/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource = D:\\murad_bakhshiyev\\Repos\\124EFCore\\124EFCore\\db\\dev.db"
+    "DefaultConnection": "DataSource = D:\\murad_bakhshiyev\\Repos\\m124Api\\DataAccess\\db\\dev.db"
   },
   "Logging": {
     "LogLevel": {
